# rust-api-example

./: Cargo.toml  README.md
api/products/: Cargo.toml
api/products/src/: api_doc.rs  lib.rs  routes.rs
api/products/src/instructions/: mod.rs
api/products/src/resource/: create.rs  mod.rs
api/users/: Cargo.toml
api/users/src/: api_doc.rs  lib.rs  routes.rs
api/users/src/instructions/: login.rs  mod.rs
api/users/src/resource/: login.rs  mod.rs
config/: config.yaml
config/jwt/: default_private.key  default_public.key
package/common/: Cargo.toml
package/common/src/: lib.rs  response.rs
package/config/src/: lib.rs  models.rs
package/database/src/: lib.rs
package/jwt/: Cargo.toml
package/utils/: Cargo.toml
package/utils/src/: response.rs
runtime/: Cargo.toml
runtime/src/: main.rs
