[workspace]
# Cargo should not unify feature flags across dev-dependencies and build
# dependencies. This will be the default behavior in Rust 2021.
resolver = "2"

members = [
  "runtime",
  "api/products",
  "api/users",
  "package/database",
  "package/common",
  "package/config",
  "package/jwt",
  "package/middleware",
]