[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
products = { path = "../api/products" }
users = { path = "../api/users" }
common = { path = "../package/common" }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
config = { path = "../package/config" }
database = { path = "../package/database" }
tower-http = { version = "0.5", features=["cors"]}
tower = "0.4"