[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
axum = "0.6.20"
futures = "0.3.28"
serde_json = "1.0.104"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }